test/golden/6874382203897971272.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:35:
  |
7 | main = putStrLn [fmt|hello { world|]
  |                                   ^
unexpected: 
unexpected: 
unexpected: 
expecting: ":"
expecting: "}"

    • In the quasi-quotation: [fmt|hello { world|]
  |
7 | main = putStrLn [fmt|hello { world|]
  |                      ^^^^^^^^^^^^^^^
